Version 1.0.1 (?)

  * fix exception on log page when use_pagesize is enabled
  * fix an XHTML validation bug in the footer template (issue #239)
  * fix handling of single-component CVS revision numbers (issue #237)
  * fix bug in download-as-text URL link generation (issue #241)
  * fix query.cgi bug, missing 'rss_href' template data item (issue #249)

Version 1.0 (released 01-May-2006)

  * add support for viewing Subversion repositories
  * add support for running on MS Windows
  * generate strict XHTML output
  * add support for caching by sending "Last-Modified", "Expires", 
    "ETag", and "Cache-Control" headers
  * add support for Mod_Python on Apache 2.x and ASP on IIS
  * Several changes to standalone.py:
    - -h commandline option to specify hostname for non local use.
    - -r commandline option may be repeated to use more than repository
      before actually installing ViewCVS.
    - New GUI field to test paging.
  * add new, better-integrated query interface
  * add integrated RSS feeds
  * add new "root_as_url_component" option to embed root names as
    path components in ViewCVS URLs for a more natural URL scheme
    in ViewCVS configurations with multiple repositories.
  * add new "use_localtime" option to display local times instead of UTC times
  * add new "root_parents" option to make it possible to add and
    remove repositories without modifying the ViewCVS configuration
  * add new "template_dir" option to facilitate switching between sets of 
    templates
  * add new "sort_group_dirs" option to disable grouping of
    directories in directory listings
  * add new "port" option to connect to a MySQL database on a nonstandard port
  * make "default_root" option optional. When no root is specified,
    show a page listing all available repositories
  * add "default_file_view" option to make it possible for relative
    links and image paths in checked out HTML files to work without